@@ -2,6 +2,7 @@
 
 	* eww.el (eww-submit): Make form submission work.
 	(eww-tag-input): Implement submit buttons.
+	(eww-click-radio): Implement radio and checkboxes.
 
 	* shr.el (shr-descend): Allow other packages to override (or provide)
 	rendering of elements.
